--- a/src/index.html
+++ b/src/index.html
@@ -4,21 +4,20 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>Super project #1</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
+    <!-- ім'я розробника -->
+    <load src="partials/header.html" />
+    <!-- Надя -->
+    <load src="partials/hero.html" />
+    <!-- Сергій -->
+    <load src="partials/about.html" />
+    <!-- Роман -->
+    <load src="partials/footer.html" />
 
-    <section>
-      <h1>Lorem ipsum dolor sit amet.</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
-
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
-
+    <!-- не чіпати цей рядок -->
     <script type="module" src="./main.js"></script>
   </body>
 </html>
